Challenge! Add form_for

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,2 +1,7 @@
 <h3><%= @movie.title %></h3>
 <h4><%= @movie.director %><h4>
+<h4><%= @movie.plot_keywords %><h4>
+<h4><%= @movie.facebook_likes %><h4>
+<h4><%= @movie.year %><h4>
+
+<%= link_to "Edit", edit_movie_path(@movie.id) %>
