Green bar: updated movie mailer

--- a/app/views/movie_mailer/new_movie_email.html.erb
+++ b/app/views/movie_mailer/new_movie_email.html.erb
@@ -4,3 +4,6 @@
 <div>
   Someone has added a new Movie!
 </div>
+
+<div>Title: <%= @movie.title %> </div>
+<div>Director: <%= @movie.director.name %> </div>
