Update view to use director.name; system test

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,5 +1,5 @@
 <h3><%= @movie.title %></h3>
-<h4><%= @movie.director %><h4>
+<h4><%= @movie.director.name %><h4>
 <h4><%= @movie.plot_keywords %><h4>
 <h4><%= @movie.facebook_likes %><h4>
 <h4><%= @movie.year %><h4>
