--- a/app/views/movies/new.html.erb
+++ b/app/views/movies/new.html.erb
@@ -1,1 +1,1 @@
-<%= render partial: "form", locals: { movie: Movie.new } %>
+<%= render partial: "form", locals: { movie: Movie.new(director: Director.new) } %>
